tests/machine/x/c/user_type_literal.error
exit status 1
/workspace/mochi/tests/machine/x/c/user_type_literal.c:29:3: error: unknown type name ‘Person’
   29 |   Person author;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/user_type_literal.c:48:8: error: ‘Book’ undeclared (first use in this function); did you mean ‘book’?
   48 |       (Book){.title = "Go", .author = (Person){.name = "Bob", .age = 42}};
      |        ^~~~
      |        book
/workspace/mochi/tests/machine/x/c/user_type_literal.c:48:8: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/user_type_literal.c:48:13: error: expected ‘,’ or ‘;’ before ‘{’ token
   48 |       (Book){.title = "Go", .author = (Person){.name = "Bob", .age = 42}};
      |             ^
/workspace/mochi/tests/machine/x/c/user_type_literal.c:49:29: error: request for member ‘name’ in something not a structure or union
   49 |   printf("%s\n", book.author.name);
      |                             ^
