tests/machine/x/c/user_type_literal.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Person Person;
typedef struct Book Book;

typedef struct Person {
  char *name;
  int age;
} Person;
typedef struct {
  int len;
  person_t *data;
} person_list_t;
person_list_t create_person_list(int len) {
  person_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(person_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Book {
  char *title;
  Person author;
} Book;
typedef struct {
  int len;
  book_t *data;
} book_list_t;
book_list_t create_book_list(int len) {
  book_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(book_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  book_t book =
      (Book){.title = "Go", .author = (Person){.name = "Bob", .age = 42}};
  printf("%s\n", book.author.name);
  return 0;
}
int main() { return _mochi_main(); }
